sem5/parsers/lab3/src/main/java/ru/itmo/ctd/parsers/lab3/grammar/gen/KekParser.java
// Generated from C:/Programing/sem5/parsers/lab3/src/main/java/ru/itmo/ctd/parsers/lab3/grammar\Kek.g4 by ANTLR 4.9.2
package ru.itmo.ctd.parsers.lab3.grammar.gen;

    import ru.itmo.ctd.parsers.lab3.translation.*;
    import java.util.stream.Collectors;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class KekParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INT_TYPE=1, BOOL_TYPE=2, COLON=3, RETURN=4, CONTINUE=5, BREAK=6, ELSE=7, 
		IF=8, WHILE=9, MOD=10, DIV=11, MUL=12, MINUS=13, PLUS=14, NOT=15, AND=16, 
		OR=17, LET=18, DEF=19, LPAR=20, RPAR=21, LBRACE=22, RBRACE=23, COMMA=24, 
		ASSIGN=25, BOOL=26, INT=27, ID=28, BLOCK_COMMENT=29, LINE_COMMENT_1=30, 
		LINE_COMMENT_2=31, EOLN=32, WS=33;
	public static final int
		RULE_file = 0, RULE_var_declaration = 1, RULE_func_declaration = 2, RULE_func_args = 3, 
		RULE_func_arg = 4, RULE_type_annotation = 5, RULE_type = 6, RULE_primitive_type = 7, 
		RULE_block = 8, RULE_statement = 9, RULE_flow_statement = 10, RULE_return_statement = 11, 
		RULE_break_statement = 12, RULE_continue_statement = 13, RULE_if_statement = 14, 
		RULE_if_true_part = 15, RULE_if_false_part = 16, RULE_while_statement = 17, 
		RULE_simple_statement = 18, RULE_assign_statement = 19, RULE_expression = 20, 
		RULE_var_usage = 21, RULE_or_expr = 22, RULE_or_expr_cont = 23, RULE_and_expr = 24, 
		RULE_and_expr_cont = 25, RULE_not_expr = 26, RULE_not_expr_cont = 27, 
		RULE_additive_expr = 28, RULE_additive_expr_cont = 29, RULE_multiplicative_expr = 30, 
		RULE_multiplicative_expr_cont = 31, RULE_terminal_expr = 32, RULE_func_call = 33, 
		RULE_literal = 34, RULE_int_literal = 35, RULE_bool_literal = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "var_declaration", "func_declaration", "func_args", "func_arg", 
			"type_annotation", "type", "primitive_type", "block", "statement", "flow_statement", 
			"return_statement", "break_statement", "continue_statement", "if_statement", 
			"if_true_part", "if_false_part", "while_statement", "simple_statement", 
			"assign_statement", "expression", "var_usage", "or_expr", "or_expr_cont", 
			"and_expr", "and_expr_cont", "not_expr", "not_expr_cont", "additive_expr", 
			"additive_expr_cont", "multiplicative_expr", "multiplicative_expr_cont", 
			"terminal_expr", "func_call", "literal", "int_literal", "bool_literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'int'", "'bool'", "':'", "'return'", "'continue'", "'break'", 
			"'else'", "'if'", "'while'", "'%'", "'/'", "'*'", "'-'", "'+'", null, 
			null, null, "'let'", "'def'", "'('", "')'", "'{'", "'}'", "','", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INT_TYPE", "BOOL_TYPE", "COLON", "RETURN", "CONTINUE", "BREAK", 
			"ELSE", "IF", "WHILE", "MOD", "DIV", "MUL", "MINUS", "PLUS", "NOT", "AND", 
			"OR", "LET", "DEF", "LPAR", "RPAR", "LBRACE", "RBRACE", "COMMA", "ASSIGN", 
			"BOOL", "INT", "ID", "BLOCK_COMMENT", "LINE_COMMENT_1", "LINE_COMMENT_2", 
			"EOLN", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Kek.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private KekContextManager contextManager;

	public KekParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FileContext extends ParserRuleContext {
		public KekContextManager contextManager;
		public KekFile kekFile;
		public Var_declarationContext var_declaration;
		public List<Var_declarationContext> vars = new ArrayList<Var_declarationContext>();
		public Func_declarationContext func_declaration;
		public List<Func_declarationContext> funcs = new ArrayList<Func_declarationContext>();
		public List<Var_declarationContext> var_declaration() {
			return getRuleContexts(Var_declarationContext.class);
		}
		public Var_declarationContext var_declaration(int i) {
			return getRuleContext(Var_declarationContext.class,i);
		}
		public List<Func_declarationContext> func_declaration() {
			return getRuleContexts(Func_declarationContext.class);
		}
		public Func_declarationContext func_declaration(int i) {
			return getRuleContext(Func_declarationContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public FileContext(ParserRuleContext parent, int invokingState, KekContextManager contextManager) {
			super(parent, invokingState);
			this.contextManager = contextManager;
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KekListener ) ((KekListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KekListener ) ((KekListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KekVisitor ) return ((KekVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file(KekContextManager contextManager) throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState(), contextManager);
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

			    this.contextManager = contextManager;

			setState(77); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(77);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LET:
					{
					setState(75);
					((FileContext)_localctx).var_declaration = var_declaration();
					((FileContext)_localctx).vars.add(((FileContext)_localctx).var_declaration);
					}
					break;
				case DEF:
					{
					setState(76);
					((FileContext)_localctx).func_declaration = func_declaration();
					((FileContext)_localctx).funcs.add(((FileContext)_localctx).func_declaration);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(79); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==LET || _la==DEF );

			    //KekGlobalContext globalContext = contextManager.getGlobalContext();
			    //((FileContext)_localctx).funcs.stream().map(x -> x.kekFunction).forEach(globalContext::addFunction);
			    //((FileContext)_localctx).vars.stream().map(x -> x.kekVar).forEach(globalContext::addVar);
			    ((FileContext)_localctx).kekFile =  new KekFile(contextManager.getGlobalContext());

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declarationContext extends ParserRuleContext {
		public KekVar kekVar;
		public Type_annotationContext type_annotation;
		public TerminalNode LET() { return getToken(KekParser.LET, 0); }
		public TerminalNode ID() { return getToken(KekParser.ID, 0); }
		public Type_annotationContext type_annotation() {
			return getRuleContext(Type_annotationContext.class,0);
		}
		public TerminalNode EOLN() { return getToken(KekParser.EOLN, 0); }
		public Var_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KekListener ) ((KekListener)listener).enterVar_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KekListener ) ((KekListener)listener).exitVar_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KekVisitor ) return ((KekVisitor<? extends T>)visitor).visitVar_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_declarationContext var_declaration() throws RecognitionException {
		Var_declarationContext _localctx = new Var_declarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_var_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(LET);
			setState(84);
			match(ID);
			setState(85);
			((Var_declarationContext)_localctx).type_annotation = type_annotation();
			setState(86);
			match(EOLN);

			    KekContext context = contextManager.getContext();
			    ((Var_declarationContext)_localctx).kekVar =  new KekVar(_localctx.getChild(1).getText(), ((Var_declarationContext)_localctx).type_annotation.kekType);
			    context.addVar(_localctx.kekVar);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_declarationContext extends ParserRuleContext {
		public KekFunction kekFunction;
		public Func_argsContext func_args;
		public Type_annotationContext type_annotation;
		public BlockContext block;
		public TerminalNode DEF() { return getToken(KekParser.DEF, 0); }
		public TerminalNode ID() { return getToken(KekParser.ID, 0); }
		public TerminalNode LPAR() { return getToken(KekParser.LPAR, 0); }
		public Func_argsContext func_args() {
			return getRuleContext(Func_argsContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(KekParser.RPAR, 0); }
		public Type_annotationContext type_annotation() {
			return getRuleContext(Type_annotationContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public Func_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KekListener ) ((KekListener)listener).enterFunc_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KekListener ) ((KekListener)listener).exitFunc_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KekVisitor ) return ((KekVisitor<? extends T>)visitor).visitFunc_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_declarationContext func_declaration() throws RecognitionException {
		Func_declarationContext _localctx = new Func_declarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_func_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(DEF);
			setState(90);
			match(ID);
			setState(91);
			match(LPAR);
			setState(92);
			((Func_declarationContext)_localctx).func_args = func_args();
			setState(93);
			match(RPAR);
			setState(94);
			((Func_declarationContext)_localctx).type_annotation = type_annotation();
			setState(95);
			((Func_declarationContext)_localctx).block = block(((Func_declarationContext)_localctx).func_args.args);

			    ((Func_declarationContext)_localctx).kekFunction =  new KekFunction(
			        _localctx.getChild(1).getText(),
			        ((Func_declarationContext)_localctx).type_annotation.kekType,
			        ((Func_declarationContext)_localctx).func_args.args,
			        ((Func_declarationContext)_localctx).block.content
			    );
			    contextManager.getGlobalContext().addFunction(_localctx.kekFunction);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_argsContext extends ParserRuleContext {
		public List<KekVar> args;
		public Func_argContext func_arg;
		public List<Func_argContext> argContexts = new ArrayList<Func_argContext>();
		public List<Func_argContext> func_arg() {
			return getRuleContexts(Func_argContext.class);
		}
		public Func_argContext func_arg(int i) {
			return getRuleContext(Func_argContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(KekParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(KekParser.COMMA, i);
		}
		public Func_argsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_args; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KekListener ) ((KekListener)listener).enterFunc_args(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KekListener ) ((KekListener)listener).exitFunc_args(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KekVisitor ) return ((KekVisitor<? extends T>)visitor).visitFunc_args(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_argsContext func_args() throws RecognitionException {
		Func_argsContext _localctx = new Func_argsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_func_args);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(98);
				((Func_argsContext)_localctx).func_arg = func_arg();
				((Func_argsContext)_localctx).argContexts.add(((Func_argsContext)_localctx).func_arg);
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(99);
					match(COMMA);
					setState(100);
					((Func_argsContext)_localctx).func_arg = func_arg();
					((Func_argsContext)_localctx).argContexts.add(((Func_argsContext)_localctx).func_arg);
					}
					}
					setState(105);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}


			    ((Func_argsContext)_localctx).args =  ((Func_argsContext)_localctx).argContexts.stream().map(x -> x.kekVar).collect(Collectors.toList());

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_argContext extends ParserRuleContext {
		public KekVar kekVar;
		public Type_annotationContext type_annotation;
		public TerminalNode ID() { return getToken(KekParser.ID, 0); }
		public Type_annotationContext type_annotation() {
			return getRuleContext(Type_annotationContext.class,0);
		}
		public Func_argContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_arg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KekListener ) ((KekListener)listener).enterFunc_arg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KekListener ) ((KekListener)listener).exitFunc_arg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KekVisitor ) return ((KekVisitor<? extends T>)visitor).visitFunc_arg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_argContext func_arg() throws RecognitionException {
		Func_argContext _localctx = new Func_argContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_func_arg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(ID);
			setState(111);
			((Func_argContext)_localctx).type_annotation = type_annotation();

			    ((Func_argContext)_localctx).kekVar =  new KekVar(_localctx.getChild(0).getText(), ((Func_argContext)_localctx).type_annotation.kekType);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Type_annotationContext extends ParserRuleContext {
		public KekType kekType;
		public TypeContext type;
		public TerminalNode COLON() { return getToken(KekParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Type_annotationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_annotation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KekListener ) ((KekListener)listener).enterType_annotation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KekListener ) ((KekListener)listener).exitType_annotation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KekVisitor ) return ((KekVisitor<? extends T>)visitor).visitType_annotation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Type_annotationContext type_annotation() throws RecognitionException {
		Type_annotationContext _localctx = new Type_annotationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_type_annotation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(COLON);
			setState(115);
			((Type_annotationContext)_localctx).type = type();
			((Type_annotationContext)_localctx).kekType =  ((Type_annotationContext)_localctx).type.kekType;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public KekType kekType;
		public Primitive_typeContext primitive_type;
		public Primitive_typeContext primitive_type() {
			return getRuleContext(Primitive_typeContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KekListener ) ((KekListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KekListener ) ((KekListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KekVisitor ) return ((KekVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			((TypeContext)_localctx).primitive_type = primitive_type();
			((TypeContext)_localctx).kekType =  ((TypeContext)_localctx).primitive_type.kekType;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Primitive_typeContext extends ParserRuleContext {
		public KekType kekType;
		public TerminalNode INT_TYPE() { return getToken(KekParser.INT_TYPE, 0); }
		public TerminalNode BOOL_TYPE() { return getToken(KekParser.BOOL_TYPE, 0); }
		public Primitive_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitive_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof KekListener ) ((KekListener)listener).enterPrimitive_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof KekListener ) ((KekListener)listener).exitPrimitive_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KekVisitor ) return ((KekVisitor<? extends T>)visitor).visitPrimitive_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Primitive_typeContext primitive_type() throws RecognitionException {
		Primitive_typeContext _localctx = new Primitive_typeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_primitive_type);
		try {
			setState(124);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT_TYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				match(INT_TYPE);
				}
				break;
			case BOOL_TYPE:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				match(BOOL_TYPE);

				    ((Primitive_typeContext)_localctx).kekType =  KekType.valueOf(_localctx.getChild(0).getText().toUpperCase());

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<KekVar> additionalVars;
		public KekBlock content;
		public StatementContext statement;
		public List<StatementContext> stmts = new ArrayList<StatementContext>();
		public TerminalNode LBRACE() { return getToken(KekParser.LBRACE, 0); }
